--- a/dom-ex1/index.html
+++ b/dom-ex1/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <input type="text">
-  <br>
-  <button>Click me to get the text!</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <input type="text" id="my-input" value="Enter your text here" />
+    <br />
+    <br />
+    <button onclick="showText()">Click me to get the text!</button><br />
+
+    <p id="p"></p>
+    <script src="exercise.js"></script>
+  </body>
 </html>
