--- a/dom-ex3/index.html
+++ b/dom-ex3/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body style="height: 100vh;">
-  <button>Click me</button>
-  <p>This is just some text, make me change color</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body style="height: 100vh">
+    <button onmouseover="" onclick="changeEffect(), textColor()">
+      Click me
+    </button>
+    <p id="p">This is just some text, make me change color</p>
+    <script src="exercise.js"></script>
+  </body>
 </html>
